# child-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  MASTER_PROMPT.md  Makefile  README.md  pyproject.toml
agent/: __init__.py  __main__.py  cli.py  config.py  knowledge.py  logging.py
agent/channels/: __init__.py  telegram.py
agent/evolve/: __init__.py  evolve.py
agent/fleet/: __init__.py  metrics.py  orchestrator.py  registry.py  runner.py  supervisor.py
agent/memory/: __init__.py  store.py
agent/publish/: __init__.py  git_publish.py
agent/queue/: __init__.py  task_queue.py
agent/rag/: __init__.py  embeddings.py  loaders.py  pipeline.py  retrieve.py  store.py
agent/scheduler/: __init__.py  cron.py  daemon.py
agent/security/: __init__.py  secrets.py
agent/skills/: __init__.py  loader.py
agent/tools/: __init__.py  authoring.py  sandbox.py
agents/supervisor/: AGENT.md
agents/worker/: AGENT.md
authored_tools/: README.md
docs/: creating-tools.md  deployment.md  fleet.md  rag.md  self-improvement.md  telegram.md
knowledge/: REGISTRY.md  registry.json
scion/: __init__.py  __main__.py  cli.py  config.py  knowledge.py  logging.py
scion/agent/: __init__.py  events.py  loop.py  prompts.py  runtime.py  session.py
scion/channels/: __init__.py  base.py  telegram.py
scion/llm/: __init__.py  anthropic_client.py  base.py  registry.py
scion/memory/: __init__.py  blocks.py  store.py
scion/publish/: __init__.py  git_publish.py
scion/queue/: __init__.py  task_queue.py
scion/rag/: __init__.py  chunkers.py  embeddings.py  loaders.py  pipeline.py  retrieve.py  store.py
scion/scheduler/: __init__.py  cron.py  supervisor.py  worker.py
scion/security/: __init__.py  policy.py  secrets.py
scion/skills/: __init__.py  loader.py
scion/tools/: __init__.py  authoring.py  base.py  registry.py  sandbox.py
scion/tools/builtins/: __init__.py  agent_tools.py  files.py  knowledge.py  memory_tools.py  publish.py  rag_tools.py  shell.py  skill_author.py  task_tools.py  tool_author.py  web.py
scripts/: run-daemon.sh  run-sentinel.sh  run-serve.sh
skills/competitor-research/: SKILL.md
tests/: conftest.py  fake_claude.sh  test_agent_loop.py  test_authoring.py  test_config.py  test_cron.py  test_evolve.py  test_fleet.py  test_memory.py  test_queue.py  test_rag.py  test_security.py  test_skills.py  test_telegram.py  test_tools.py
