[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.3.0"
description = "A self-improving, self-rewriting multi-agent runtime driven by Claude Code (no API cost)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "agent" }]
keywords = ["claude", "claude-code", "agent", "multi-agent", "orchestrator", "self-improving", "self-rewriting", "telegram", "autonomous"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# ZERO required dependencies. The brain — and every spawned worker — is a `claude`
# process on your subscription, not an LLM API; there is no SDK to install. The
# entire core runs on the Python standard library. Everything below is optional and
# degrades gracefully.
dependencies = []

[project.optional-dependencies]
# Recommended quality-of-life set for real use.
recommended = ["requests>=2.28", "numpy>=1.23", "pypdf>=4.0"]
# Document loaders for RAG ingestion.
docs = ["pypdf>=4.0", "beautifulsoup4>=4.11", "lxml>=4.9"]
# Local semantic embeddings (still no API / no per-token cost).
embeddings-local = ["sentence-transformers>=2.2"]
# Hosted embedding backends (these DO cost money; the default 'hashing' is free).
embeddings-voyage = ["voyageai>=0.2"]
embeddings-openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = ["requests>=2.28", "numpy>=1.23", "pypdf>=4.0", "beautifulsoup4>=4.11", "lxml>=4.9"]

[project.scripts]
agent = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# the argparse builder is intentionally dense (one subparser per line)
"agent/cli.py" = ["E702", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
